compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__imports__import_type_duplicate.snap
---
source: compiler-core/src/type_/tests/imports.rs
expression: "import one.{One, type One}\n\npub fn main() -> One {\n  todo\n}\n"
---
----- SOURCE CODE
import one.{One, type One}

pub fn main() -> One {
  todo
}


----- ERROR
error: Unknown module value
  ┌─ /src/one/two.gleam:1:13
  │
1 │ import one.{One, type One}
  │             ^^^ Did you mean `type One`?

`One` is only a type, it cannot be imported as a value.
